# Gen_AI_Parctice

05_microservices_all_in_one_platform/10_microservice_helloworld/project_fastapi/: pyproject.toml
05_microservices_all_in_one_platform/10_microservice_helloworld/project_fastapi/project_fastapi/: main.py
05_microservices_all_in_one_platform/11_microservice_db/fastapi-neon/: README.md  pyproject.toml
05_microservices_all_in_one_platform/14_docker/03_dev_containers/: Dockerfile.dev  README.md  pyproject.toml
05_microservices_all_in_one_platform/14_docker/04_compose/: README.md
05_microservices_all_in_one_platform/14_docker/05_compose_db/: compose.yaml
05_microservices_all_in_one_platform/15_event_driven/01_kafka_single_node_compose/: readme.md
05_microservices_all_in_one_platform/15_event_driven/02_kafka_messaging/: readme.md
05_microservices_all_in_one_platform/15_event_driven/03_protobuf/: compose.yaml
05_microservices_all_in_one_platform/15_event_driven/04_schema-registry/: compose.yaml
05_microservices_all_in_one_platform/16_oauth2_auth/00_generate_access_token/: compose.yml
05_microservices_all_in_one_platform/16_oauth2_auth/00_generate_access_token/auth_service/: pyproject.toml
05_microservices_all_in_one_platform/16_oauth2_auth/00_generate_access_token/auth_service/auth_service/: main.py
05_microservices_all_in_one_platform/16_oauth2_auth/02_authorize_endpoints/auth_service/: Dockerfile  pyproject.toml
05_microservices_all_in_one_platform/17_kong/01_kong_compose/: docker-compose.yml
05_microservices_all_in_one_platform/17_kong/03_merge-specs/: docker-compose.yml  gateway-startup.sh
05_microservices_all_in_one_platform/20_serverless_containers/08_azure_container_apps/02b_quick_start/codebase/: Dockerfile.prod  pyproject.toml
Mart-Platform-AI/: chat.txt  compose.yaml  mart.excalidraw
Mart-Platform-AI/docs/: product-service-milestone.md
Mart-Platform-AI/inventory-service/app/: main.py
Mart-Platform-AI/product-service/: .env  pyproject.toml
Mart-Platform-AI/product-service/app/: main.py  (+1 more)
Mart-Platform-API2/: .gitignore  chat.txt  compose.yaml  mart-platform.drawio  readme.md
Mart-Platform-API2/docs/: product-service-milestone.md
Mart-Platform-API2/inventory-service/: .env
Mart-Platform-API2/order-service/: .env  README.md  pyproject.toml
Mart-Platform-API2/product-service/: Dockerfile.dev  pyproject.toml
Mart-Platform-API2/todo/: .env  README.md  pyproject.toml
Mart-Platform-API2/todo2/: .env  README.md  pyproject.toml
Mart-Platform-API2/todo2/app/: db_engine.py  main.py  todo.proto  todo_pb2.py
Mart-Platform-API2/todo2/app/consumers/: todo_consumer.py
Mart-Platform-API2/todo2/app/crud/: todo_crud.py
Mart-Platform-API2/todo2/app/models/: todo_model.py
Mart-Platform-API2/user-service/: .env  Dockerfile.dev  README.md  pyproject.toml
(+93 files in other folders)
