[tool.poetry]
name = "project-fastapi"
version = "0.1.0"
description = ""
authors = ["Hassan Sattar <hasansattar650@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
uvicorn = {extras = ["standard"], version = "^0.30.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
