[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Hassan Sattar <hasansattar650@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
unicorn = "^2.0.1.post1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
